--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -1,10 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="快速查询"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:textColor="#ff5722"
+        android:layout_marginTop="50dp"
         />
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:padding="20dp">
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:met_floatingLabel="highlight"
+            app:met_floatingLabelText="确保正确填写设备名"
+            android:hint="请填写要查询设备的名称"
+            android:layout_marginTop="10dp"
+            android:focusableInTouchMode="true"
+            app:met_baseColor="@color/colorPrimary"
+            app:met_primaryColor="@color/colorPrimaryDark"
+            android:id="@+id/edittext_searchName"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="确认查询"
+            android:background="@color/colorPrimary"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:layout_marginTop="15dp"
+            android:id="@+id/button_confirm_search"
+            />
+
+    </LinearLayout>
+</RelativeLayout>
